tools/clang/test/zapcc/multi/canonical-type-erased/canonical-type-erased.lst
// RUN: %zapccxx -std=c++11 -fsyntax-only %S/file1.cpp %S/file2.cpp 2>&1 | tee %t.txt && FileCheck -input-file=%t.txt %s -check-prefix=CHECK-COMPILE --allow-empty
// CHECK-COMPILE-NOT: note: system {{.*}} was removed
// CHECK-COMPILE-NOT: error: 
// CHECK-COMPILE-NOT: warning:
// CHECK-COMPILE-NOT: Assertion
// CHECK-COMPILE-NOT: Stack dump:
